# chan.py

./: .gitignore  CMakeLists.txt  Chan.py  Chan.pyx  ChanConfig.py  ChanConfig.pyx  README.md  __init__.py  agg_time.py  auto_train.py  autolearn.ipynb  autolearn.py  automl.py  build.py  chan_config.json  chan_result.py  check_dup.py  config_dump.py  config_json.dump  convert.py  data_process_step1.py  demo4.py  demo5.py  demo7.py  df_api_test.py  dp_step1.py  dp_step2.py  dump.py  dump_symbol.py  features_dup.py  gen_xgboost.py  label.py  main.py  no_trigger_plot.py  plot.py  plot_ana.py  plot_batch.py  predict_example.py  py_to_c_compiler.py  pychan-build.py  (+15 more)
Bi/: Bi.pxd  Bi.py  Bi.pyx  BiConfig.pxd  BiConfig.py  BiConfig.pyx  BiList.pxd  BiList.py  BiList.pyx  __init__.py
BuySellPoint/: BSPointConfig.py  BS_Point.py
ChanModel/: CAutoGluonModelGenerator.py  CAutoGluon_DataSet.py  CDataSet.py  CFeatureGenerator.py  CModelGenerator.py  Features.pyx
Combiner/: Combine_Item.pyx  KLine_Combiner.py  KLine_Combiner.pyx
Common/: CEnum.pxd  CEnum.py  CEnum.pyx  CTime.py  CTime.pyx  ChanException.pxd  ChanException.pyx  cache.pxd  cache.pyx  func_util.pyx
DataAPI/: BaoStockAPI.pyx  CommonStockAPI.pyx  ccxt.pyx  csvAPI.py  csvAPI.pyx  dataframeAPI.py  dataframeAPI.pyx  pdAPI.py
DataProcess/: dp.py  dp_step1.py  dp_step2.py  dp_step3.py
KLine/: KLine.py  KLine.pyx  KLine_List.py  KLine_List.pyx  KLine_Unit.pyx  TradeInfo.pyx
Math/: BOLL.pyx  KDJ.pyx  MACD.pyx  RSI.pyx  TrendLine.pyx  TrendModel.pyx
Plot/: PlotDriver.py  PlotMeta.py
Seg/: BakSegListChan.py  Seg.pyx  (+10 more)
(+31 files in other folders)
